# cmd/server/handlers/pacienteHandler.go
@@ -20,6 +20,19 @@ func NewPacienteHandler() *pacienteHandler {
 	}
 }
 
+// SalvarPaciente - Salva Paciente godoc
+// @BasePath /api/v1
+// @Summary Post Patient
+// @Tags Pacientes
+// @Description post patients in DB
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {objet} domain.Paciente
+// @Failure 400 {object} web.errorResponse
+// @Failure 404 {object} web.errorResponse
+// @Failure 500 {object} web.errorResponse
+// @Router /pacientes/ [post]
 func (ph *pacienteHandler) SalvarPaciente(ctx *gin.Context) {
 	var dto dtos.PacienteRequestBody
 	errDtoJSON := ctx.ShouldBindJSON(&dto)
@@ -37,6 +50,19 @@ func (ph *pacienteHandler) SalvarPaciente(ctx *gin.Context) {
 	web.Success(ctx, 201, resp)
 }
 
+// BuscarPacientes - Busca todos  os Pacientes godoc
+// @BasePath /api/v1
+// @Summary Get All Patients
+// @Tags Pacientes
+// @Description get all patients in DB
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {objet} domain.Paciente
+// @Failure 400 {object} web.errorResponse
+// @Failure 404 {object} web.errorResponse
+// @Failure 500 {object} web.errorResponse
+// @Router /pacientes [get]
 func (ph *pacienteHandler) BuscarPacientes(ctx *gin.Context) {
 	data, err := ph.s.FindAll(ctx)
 	if err != nil {
@@ -46,6 +72,19 @@ func (ph *pacienteHandler) BuscarPacientes(ctx *gin.Context) {
 	web.Success(ctx, 200, data)
 }
 
+// BuscarPacientePorId - Busca Paciente por ID godoc
+// @BasePath /api/v1
+// @Summary Get Dentist by ID
+// @Tags Pacientes
+// @Description get dentist by ID in DB
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {objet} domain.Paciente
+// @Failure 400 {object} web.errorResponse
+// @Failure 404 {object} web.errorResponse
+// @Failure 500 {object} web.errorResponse
+// @Router /pacientes/:id [get]
 func (ph *pacienteHandler) BuscarPacientePorId(ctx *gin.Context) {
 	id := ctx.Param("id")
 
@@ -64,6 +103,19 @@ func (ph *pacienteHandler) BuscarPacientePorId(ctx *gin.Context) {
 	web.Success(ctx, 200, dto)
 }
 
+// AtualizarPaciente - Atualiza Paciente por ID godoc
+// @BasePath /api/v1
+// @Summary Put Patient by ID
+// @Tags Pacientes
+// @Description put patients by ID in DB
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {objet} domain.Paciente
+// @Failure 400 {object} web.errorResponse
+// @Failure 404 {object} web.errorResponse
+// @Failure 500 {object} web.errorResponse
+// @Router /pacientes [put]
 func (ph *pacienteHandler) AtualizarPaciente(ctx *gin.Context) {
 	var dto dtos.PacienteRequestBody
 	id := ctx.Param("id")
@@ -90,6 +142,19 @@ func (ph *pacienteHandler) AtualizarPaciente(ctx *gin.Context) {
 	web.Success(ctx, 200, resp)
 }
 
+// DeletarPaciente - Deleta Paciente por ID godoc
+// @BasePath /api/v1
+// @Summary Deleta Patient by ID
+// @Tags Pacientes
+// @Description delete patients by ID in DB
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {objet} domain.Paciente
+// @Failure 400 {object} web.errorResponse
+// @Failure 404 {object} web.errorResponse
+// @Failure 500 {object} web.errorResponse
+// @Router /pacientes/:id [delete]
 func (ph *pacienteHandler) DeletarPaciente(ctx *gin.Context) {
 	id := ctx.Param("id")
 	idNum, err := strconv.Atoi(id)
